# mica

./: Cargo.toml  README.md
scripts/: Install-Mica.ps1
src/: main.rs
src/client/: mod.rs
src/lib/: lib.rs
src/lib/client/: mod.rs
src/lib/server/: mod.rs
src/server/: capture_audio.rs  encode_pcm.rs  mod.rs  rtsp.rs
