[package]
name = "mica"
version = "0.4.1"
edition = "2024"
authors = ["Arane Aimer"]

[lib]
name = "libmica"
path = "src/lib/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "mica"
path = "src/bin/main.rs"

[dependencies]
# tokio = { version = "1.37", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0.98"
gstreamer = "0.24.0"
gstreamer-rtsp-server = "0.24.0"
glib = "0.21.0"
libc = "0.2.174"
futures = "0.3.31"
libloading = "0.8.8"

[profile.release]
opt-level = "z"       # Or "s" for size, "z" is smallest
lto = true            # Enable Link Time Optimization
codegen-units = 1     # Single codegen unit = better optimization, slower compile
strip = true          # Strip debug symbols (Rust 1.79+)
panic = "abort"       # No unwinding, smaller binary
